src/feature-modules/FA-Embedded-Image-Viewer/src/styles/Style.css
#eiv-main {
    position: fixed;
    width: 100vw;
    height: 100vh;
    max-width: 1850px;
    z-index: 999999;
    background: rgba(30, 33, 38, .65);
}

#eiv-background {
    position: fixed;
    display: flex;
    flex-direction: column;
    left: 50%;
    transform: translate(-50%, 0%);
    margin-top: 20px;
    padding: 20px;
    background: rgba(30, 33, 38, .90);
    border-radius: 10px;
}

#eiv-submission-container {
    -webkit-user-drag: none;
}

.eiv-submission-img {
    max-width: inherit;
    max-height: inherit;
    border-radius: 10px;
    user-select: none;
}

#eiv-button-container {
    position: relative;
    margin-top: 20px;
    margin-bottom: 6px;
    margin-left: 20px;
}

#eiv-button-wrapper {
    display: flex;
    justify-content: center;
    align-items: center;
}

#eiv-preview-spinner-container {
    position: absolute;
    top: 50%;
    right: 0;
    transform: translateY(-50%);
}

.eiv-button {
    margin-left: 4px;
    margin-right: 4px;
    user-select: none;
}

#eiv-additional-info {
    color: #afc6e1;
}

